# ClaimChecker

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  main.py
backend/src/: models.py
backend/src/api/: routes.py
backend/src/kb/: database.py  ingest.py
backend/src/pipeline/: decompose.py  pipeline.py  verify.py
frontend/: Dockerfile  app.py  style.css
